// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`gridRowPosition renders 0 1`] = `
Array [
  .c0 {
  grid-row-position: 0;
}

<div
    className="c0"
  />,
  .c0 {
  grid-row-position: 0;
}

<div
    className="c0"
  />,
  .c0 {
  grid-row-position: 0;
}

<div
    className="c0"
  />,
  .c0 {
  grid-row-position: 0;
}

<div
    className="c0"
  />,
]
`;

exports[`gridRowPosition renders function 1`] = `
Array [
  .c0 {
  grid-row-position: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  grid-row-position: has;
}

<div
    className="c0"
  />,
  .c0 {
  grid-row-position: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  grid-row-position: has;
}

<div
    className="c0"
  />,
]
`;

exports[`gridRowPosition renders invalid theme path 1`] = `
Array [
  .c0 {
  grid-row-position: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  grid-row-position: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  grid-row-position: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  grid-row-position: invalid.path.1;
}

<div
    className="c0"
  />,
]
`;

exports[`gridRowPosition renders negative number 1`] = `
Array [
  .c0 {
  grid-row-position: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  grid-row-position: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  grid-row-position: -42365;
}

<div
    className="c0"
  />,
  .c0 {
  grid-row-position: -42365;
}

<div
    className="c0"
  />,
]
`;

exports[`gridRowPosition renders object [breakpoints] 1`] = `
Array [
  @media screen and (min-width:November) {
  .c0 {
    grid-row-position: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    grid-row-position: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    grid-row-position: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    grid-row-position: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {
  .c0 {
    grid-row-position: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    grid-row-position: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    grid-row-position: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    grid-row-position: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    grid-row-position: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    grid-row-position: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    grid-row-position: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    grid-row-position: November;
  }
}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    grid-row-position: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    grid-row-position: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    grid-row-position: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    grid-row-position: November;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`gridRowPosition renders object [breakpoints] 2`] = `
Array [
  @media May {
  .c0 {
    grid-row-position: July;
  }
}

@media April {
  .c0 {
    grid-row-position: August;
  }
}

@media January {
  .c0 {
    grid-row-position: September;
  }
}

@media April {
  .c0 {
    grid-row-position: November;
  }
}

@media June {
  .c0 {
    grid-row-position: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {
  .c0 {
    grid-row-position: July;
  }
}

@media April {
  .c0 {
    grid-row-position: August;
  }
}

@media January {
  .c0 {
    grid-row-position: September;
  }
}

@media April {
  .c0 {
    grid-row-position: November;
  }
}

@media June {
  .c0 {
    grid-row-position: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    grid-row-position: January;
  }
}

@media April {
  .c0 {
    grid-row-position: December;
  }
}

@media January {
  .c0 {
    grid-row-position: April;
  }
}

@media April {
  .c0 {
    grid-row-position: May;
  }
}

@media June {
  .c0 {
    grid-row-position: June;
  }
}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    grid-row-position: January;
  }
}

@media April {
  .c0 {
    grid-row-position: December;
  }
}

@media January {
  .c0 {
    grid-row-position: April;
  }
}

@media April {
  .c0 {
    grid-row-position: May;
  }
}

@media June {
  .c0 {
    grid-row-position: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`gridRowPosition renders postitive number 1`] = `
Array [
  .c0 {
  grid-row-position: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  grid-row-position: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  grid-row-position: 42365;
}

<div
    className="c0"
  />,
  .c0 {
  grid-row-position: 42365;
}

<div
    className="c0"
  />,
]
`;

exports[`gridRowPosition renders string 1`] = `
Array [
  .c0 {
  grid-row-position: July;
}

<div
    className="c0"
  />,
  .c0 {
  grid-row-position: July;
}

<div
    className="c0"
  />,
  .c0 {
  grid-row-position: June;
}

<div
    className="c0"
  />,
  .c0 {
  grid-row-position: June;
}

<div
    className="c0"
  />,
]
`;

exports[`gridRowPosition renders valid theme path 1`] = `
Array [
  .c0 {
  grid-row-position: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  grid-row-position: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  grid-row-position: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  grid-row-position: DarkSlateBlue;
}

<div
    className="c0"
  />,
]
`;
